src/scss/components/_menu.scss
a {
	color: $primary; 
	font-weight: 400;
	text-decoration: none;
	&:hover {
		color: $secondary;
		text-decoration: none;
	}
}

/* CSS HEADER*/
.header {
	position: relative;
	width: 100%;
	background-color:$bg;
	height: 3rem;
	line-height: 50px;
	-webkit-box-shadow: 0px 8px 3px -6px black;
	-moz-box-shadow: 0px 8px 3px -6px black;
	box-shadow: 0px 8px 3px -6px black;
}


.wrap {
	max-width: 1440px;
  	/* Cambio de posición NAVBAR*/
  	margin-left: 1em;
  }

  .logo {
  	padding-top: 1rem;
  	padding-left: 1rem;
  }

/* MENU MOBIL ACABAR CON JS*/
#menu-icon {
	display: block;
	position: absolute;
	top: 0;
	right: 1em;
	cursor: pointer;
	opacity: 1;
	padding: 0 0.4em;
}

.navbar {
	float: none;
	max-height: 0;
	overflow: hidden;

	.menu {
		margin: 0;
		padding: 0;
		list-style-type: none;
		
		li {
			list-style-type: none;
			display: block;
			
			a {
				padding-right:3rem;
				&:hover {
					padding-right:3rem;
				}
			}
		}
	}
}

/* Mobile menu icon ACABAR CON JS*/			
@media (min-width: $tablet-width) {
  #menu-icon {
  	display: none;
  }

  .navbar {
  	float: right;
  	max-height: 1000px;
  	.menu li {
  		list-style-type: none;
  		display: inline-block;
  	}
  }
}

